[tool.poetry]
name = "redis-bomb"
version = "0.1.0"
description = ""
authors = ["bitbloxhub <45184892+bitbloxhub@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.10b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
